versions/0.8.0/_sources/refs/_aws-cdk_aws-athena.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"nbLFmjlOL6Onk6aUnIanKsNRPGk6RBQ8ZM8Qosj50rM="}

@aws-cdk/aws-athena
===================

.. mdinclude:: ./__aws-cdk_aws-athena.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-athena


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-athena.cloudformation

NamedQueryResource
~~~~~~~~~~~~~~~~~~

.. py:class:: NamedQueryResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``NamedQueryResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``NamedQueryResource``
   :type properties: :py:class:`~@aws-cdk/aws-athena.cloudformation.NamedQueryResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


NamedQueryResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: NamedQueryResourceProps



   .. py:attribute:: database

      ``AWS::Athena::NamedQuery.Database``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-athena-namedquery.html#cfn-athena-namedquery-database


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: queryString

      ``AWS::Athena::NamedQuery.QueryString``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-athena-namedquery.html#cfn-athena-namedquery-querystring


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: description

      ``AWS::Athena::NamedQuery.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-athena-namedquery.html#cfn-athena-namedquery-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: namedQueryName

      ``AWS::Athena::NamedQuery.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-athena-namedquery.html#cfn-athena-namedquery-name


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



.. py:currentmodule:: @aws-cdk/aws-athena

